2025-04-21  Zhengyi Fu  <i@fuzy.me>

	Enable `pdf-view-mode' by default

	* init.el: Use `pdf-view-mode' by default.
	(pdf-view-mode): Autoload this function.

2025-04-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (enable-minor-mode-in-project): Try
	loading the minor mode if input doesn't match any candidates from
	the completion table.

2025-04-15  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add package `go-mode'.

2025-04-08  Zhengyi Fu  <i@fuzy.me>

	Add package `paredit'

	* init.el <paredit>: Enable `paredit-mode' in `lisp-data-mode' and
	`scheme-mode'.  Unbind M-s in `paredit-mode-map'.  Bind M-p to
	`paredit-splice-sexp'.

	* packages.el: Add package `paredit'.

2025-04-08  Zhengyi Fu  <i@fuzy.me>

	Remove `puni'

	* packages.el:
	* init.el: Remove `puni' configuration.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+repeat--post-command): Fixed the error where
	`this-command` is not a symbol.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Bind "q" to `quit-window'.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Add keybinding for `flymake-mode'

	* init.el (toggle-map): Bind "f" to `flymake-mode'.
	Bind "q" to `display-fill-column-indicator-mode'.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Better window scrolling after xref jump and return

	* init.el (+recenter-bottom-30%): New function.  Added to
	`xref-after-return-hook'.
	<xref>: Remove `recenter' from `xref-after-jump-hook'.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Improve flymake configurations

	* init.el (+nxml-mode--flymake, +cc-mode--hook): Fix typo
	(`flymake-diagnostic-functions').
	(flymake-systemd): Autoload this function.
	(+systemd-mode--setup): New function.  Added to `systemd-mode-hook'.

2025-04-06  Zhengyi Fu  <i@fuzy.me>

	Update `diff-hl' state after committing with vc-dwim

	* init.el <diff-hl>: Add `diff-hl-update' to
	`vc-dwim-post-commit-hook'.

2025-04-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Fix key binding for `meow-universal-argument'.
